--- a/1_html/2_basico.html
+++ b/1_html/2_basico.html
@@ -1,9 +1,17 @@
-<html>
+﻿<!DOCTYPE html>
+<html lang="es">
 	<head>
+		<meta charset="UTF-8" atrib="kk">
+		
+		<title>Mi primera web HTML</title>
 	</head>
 	<body>
 		Tengo una web
 		<h1>Encabezado nivel 1 </h1>
+			<p>Un párrafo de texto largoooo pero muy largooo
+			Un párrafo de texto largoooo pero muy largooo</p>
+			<p>Segundo párrafo de texto largoooo pero muy largooo
+			Segundo párrafo de texto largoooo pero muy largooo</p>
 		<h2>Encabezado nivel 2 </h2>
 		<h3>Encabezado nivel 3 </h3>
 		<div>
@@ -12,5 +20,9 @@
 		</div>	
 		<h6>Encabezado nivel 6 </h6>
 		<div>Otro texto</div>
+		
+		<b> Texto en negrita</b>
+		<!-- Esto lo permite, mejor minusculas -->
+		<B> Texto en negrita</B>
 	</body>
 </html>
