cambiar name por id

--- a/1_html/6_ejemplo.html
+++ b/1_html/6_ejemplo.html
@@ -6,11 +6,47 @@
 </head>
 <body>
 <h1>Enlances a ejemplos HTML</h1>
+	<a href="10_ejercicio_clase.html">Ejemplo 3</a>
+	<br/>
 	<a href="3_ejer_html.html">Ejemplo 3</a>
 	<br/>
 	<a href="4_ejemplo.html">Ejemplo 4</a>
 	<br/>
 	<a href="5_ejemplo.html">Ejemplo 5</a>
+	<br/>
+	<a href="https://www.w3schools.com">
+		<h2>W3 Schools</h2>
+		<p>Web como guía de referencia</p>
+	</a>
+	<a href="#sección_1">Ir a Sección 1</a>
+	<br/>
+	<a href="#sección_2">Ir a Sección 2</a>
+	<br/>
+	<a href="#sección_3">Ir a Sección 3</a>
 	
+	<a name="sección_1"/>
+	<h3>Sección 1</h3>
+	<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>
+	BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>
+	BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>BI
+	<br/><br/><br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>
+	BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>
+	BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>
+	<a name="sección_2"/>
+	<h3>Sección 2</h3>
+	<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>
+	BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>
+	BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>BI
+	<br/><br/><br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>
+	BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>
+	BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>
+	<a name="sección_3"/>
+	<h3>Sección 3</h3>
+	<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>
+	BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>
+	BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>BI
+	<br/><br/><br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>
+	BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>
+	BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>BA<br/>BI<br/>
 </body/>
 </html>
